<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Cuadro de Texto-->

        <TextView
            android:text="@string/nombre"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/correo"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_correo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text= "@string/genero"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
        </TextView>
        <RadioGroup
            android:id="@+id/rgGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbMasculino"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/rbFemenino"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:text="@string/femenino" />

        </RadioGroup>

        <TextView
            android:layout_marginTop="12dp"
            android:text="@string/hobbies"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
        <CheckBox
            android:id="@+id/chkLeer"
            android:text="@string/leer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/chkJugar"
            android:text="@string/jugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/chkDormir"
            android:text="@string/dormir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/pais"
            android:layout_marginTop="12dp"/>

        <Spinner
            android:id="@+id/spnPaises"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:prompt="@string/hint_pais"

            />
        <Button
            android:id="@+id/btnRegistrar"
            android:text="@string/registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardResultado"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:visibility="gone"
            app:cardCornerRadius="12dp"
            app:cardElevation="8dp"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/tvResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_resultado"
                android:textSize="16sp"
                android:padding="16dp"/>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/btnLimpiar"
            android:text="@string/limpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>


